add lots of stuff